# ygo-deck-constructor

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  justfile
.github/workflows/: codspeed.yml  deplyoment.yml  integration.yml
benches/: sizes.rs  timings.rs
common/: Cargo.toml  README.md
common/src/: card.rs  card_data.rs  deck.rs  deck_part.rs  lib.rs  transfer.rs  ydk.rs
data/: Cargo.toml
data-processor/: Cargo.toml  README.md
data-processor/src/: cache.rs  cli.rs  error.rs  extract.rs  image.rs  iter_utils.rs  lib.rs  main.rs  project.rs  refine.rs  reqwest_indicatif.rs  ui.rs  ygoprodeck.rs
data/src/: card.rs  lib.rs
src/: card_view.rs  deck.rs  deck_order.rs  deck_part.rs  drag_drop.rs  error_handling.rs  lib.rs  main.css  main.rs  text_encoding.rs  undo_redo.rs  ydk.rs
src/ui/: app.rs  card_search.rs  card_view.rs  deck.rs  deck_view.rs  drag_drop.rs  drawers.rs  menu.rs  mod.rs
src/ui/tools/: error_list.rs  graphs.rs  mod.rs  type_graph.rs
