[package]
name = "ygo-deck-constructor"
edition.workspace = true

[workspace]
members = ["common", "data-processor"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
bincode = "1.3.3"
itertools = "0.13.0"
rustc-hash = "2.0.0"
serde = "1.0.203"

[dependencies]
bincode.workspace = true
common.path = "common"
console_error_panic_hook = "0.1.7"
gloo-dialogs = "0.2.0"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-net = "0.6.0"
itertools.workspace = true
leptos = { version = "0.7.3", features = ["csr"] }
lzma-rs = "0.3.0"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "DataTransfer",
    "DragEvent",
    "DomRect",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Storage",
] }

[dev-dependencies]
codspeed-criterion-compat = "2.6.0"
console = "0.15.8"
criterion = "0.5.1"
fastrand = "2.1.0"
serde.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
dbg_macro = "warn"
empty_docs = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[[bench]]
name = "sizes"
harness = false

[[bench]]
name = "timings"
harness = false
