[package]
name = "data-processor"
version.workspace = true
edition.workspace = true
default-run = "data-processor"

[dependencies]
anyhow = "1.0.86"
bincode.workspace = true
common.path = "../common"
console = "0.15.8"
ctrlc = "3.4.4"
futures = "0.3.30"
governor = "0.6.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
nonzero_ext = "0.3.0"
pin-project = "1.1.5"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde-enum-str = "0.4"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
xz2 = "0.1.7"
zip = { version = "2.1.3", default-features = false }

[dependencies.image]
# TODO https://github.com/etemesi254/zune-image/issues/184
version = "0.24.7"
features = ["jpeg", "webp"]
default-features = false
