[package]
name = "data-processor"
edition.workspace = true

[dependencies]
anyhow = "1.0.96"
bincode.workspace = true
common.path = "../common"
console = "0.15.10"
futures = "0.3.31"
governor = "0.8.1"
indicatif = { version = "0.17.11", features = ["tokio", "futures"] }
log = "0.4.26"
nonzero_ext = "0.3.0"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
xz2 = "0.1.7"
zip = { version = "2.2.3", default-features = false }

[dependencies.image]
version = "0.25.5"
features = ["jpeg", "avif"]
default-features = false
